--- a/src/DetaCSharp.Playground/DetaCSharp.Playground.csproj
+++ b/src/DetaCSharp.Playground/DetaCSharp.Playground.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\DetaCSharp\DetaCSharp.csproj" />
+    <ProjectReference Include="..\DetaCSharp\DetaCSharp.csproj" />
   </ItemGroup>
 
 </Project>
