play with some in playground adjust some return ans conerrsions for stream and byte array able to get a typed Responde from helper [need to best on this for base implementation] add some sample files on playground

--- a/src/DetaCSharp.Playground/DetaCSharp.Playground.csproj
+++ b/src/DetaCSharp.Playground/DetaCSharp.Playground.csproj
@@ -6,7 +6,34 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="files\deta_img.svg" />
+    <None Remove="files\text_file.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="files\text_file.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+
+  <ItemGroup>
     <ProjectReference Include="..\DetaCSharp\DetaCSharp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="files\deta_img.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="files\text_file.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="files\deta_logo.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
