add a strategy tu user put api is i can detemrine de file size < 10mb adjust ons responsees ans serializarion of json helper on addheader on RequestInit some code fixes ans clean lines implement return on delete asn deleteMany methods

--- a/src/DetaCSharp.Playground/DetaCSharp.Playground.csproj
+++ b/src/DetaCSharp.Playground/DetaCSharp.Playground.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="files\11MB_file.xpto">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="files\deta_logo.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
